feat: Güvenlik iyileştirmeleri
- Rate limiting ve account lockout mekanizması eklendi
- LDAP injection koruması eklendi (input sanitization)
- Global exception handler ve error response yapısı
- Password strength validation (min 8 karakter, büyük/küçük harf, rakam)
- Environment-based CORS configuration
- JWT secret validation (startup'ta kontrol)
- Logging security (sensitive data masking)
- Login attempts tracking (database'de saklanıyor)
- Database migration: V12__create_login_attempts.xml